// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/WorkflowTemplate/ReviewNodeInfo render normal exec node info 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div>
    <div
      class="css-u6p6f9"
    >
      <div
        class="step-title-wrapper"
      >
        <div
          class="step-title"
        >
          执行上线
        </div>
        <div
          class="step-title-info"
        >
          编辑审核流程，执行人在该步骤可以执行「执行上线」或「驳回」操作
        </div>
      </div>
      <div
        class="step-info-wrapper"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
        >
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="desc"
                  title="步骤描述"
                >
                  步骤描述
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input ant-input-status-success basic-input-wrapper step-desc-textarea css-1pd1cd5"
                      data-testid="exec-user-desc"
                      id="desc"
                      placeholder="请输入{{name}}"
                      style="resize: none; height: 2px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item authorized-item-switch ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="execute_by_authorized"
                  title="匹配拥有数据源上线权限的成员"
                >
                  匹配拥有数据源上线权限的成员
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      aria-required="true"
                      class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                      id="execute_by_authorized"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="assignee_user_id_list"
                  title="执行人"
                >
                  执行人
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      data-testid="exec-user-select"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="assignee_user_id_list_list_0"
                                aria-autocomplete="list"
                                aria-controls="assignee_user_id_list_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="assignee_user_id_list_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                disabled=""
                                id="assignee_user_id_list"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1uvv7g7"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
        </form>
        <div
          class="ant-divider ant-divider-horizontal step-info-divider"
          role="separator"
        />
        <div
          class="css-4a4iba"
        >
          <span
            class="ant-typography step-alert-title"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle step-alert-title-tips-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            创建/更新审批流程时请注意以下几点：
          </span>
          <div
            class="ant-typography step-alert-content"
          >
            <ul
              class="step-alert-item-icon"
            >
              <li>
                审核流程自工单发起开始，通过设置的审核步骤后，最后以执行上线结束；
              </li>
              <li>
                审核流程模板最多可设置4个审核步骤，也可不设置审核步骤；
              </li>
              <li>
                单个步骤指定执行人时，最少需要添加一个指定人，最多只能添加三个指定人。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/ReviewNodeInfo render normal review node info 1`] = `
<body>
  <div />
  <div>
    <div
      class="css-u6p6f9"
    >
      <div
        class="step-title-wrapper"
      >
        <div
          class="step-title"
        >
          审核节点
        </div>
        <div
          class="step-title-info"
        >
          编辑审核流程，拖拽移动审核节点顺序，审核人在该步骤可以执行「审核通过」或「驳回」操作
        </div>
      </div>
      <div
        class="step-info-wrapper"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
        >
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="desc"
                  title="步骤描述"
                >
                  步骤描述
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input basic-input-wrapper step-desc-textarea css-1pd1cd5"
                      data-testid="exec-user-desc"
                      id="desc"
                      placeholder="请输入{{name}}"
                      style="resize: none; height: 2px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item authorized-item-switch ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="approved_by_authorized"
                  title="匹配拥有数据源审核权限的成员"
                >
                  匹配拥有数据源审核权限的成员
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      aria-required="true"
                      class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                      id="approved_by_authorized"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="assignee_user_id_list"
                  title="审核人"
                >
                  审核人
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      data-testid="exec-user-select"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="assignee_user_id_list_list_0"
                                aria-autocomplete="list"
                                aria-controls="assignee_user_id_list_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="assignee_user_id_list_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                disabled=""
                                id="assignee_user_id_list"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1uvv7g7"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
        </form>
        <div
          class="ant-divider ant-divider-horizontal step-info-divider"
          role="separator"
        />
        <div
          class="css-4a4iba"
        >
          <span
            class="ant-typography step-alert-title"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle step-alert-title-tips-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            创建/更新审批流程时请注意以下几点：
          </span>
          <div
            class="ant-typography step-alert-content"
          >
            <ul
              class="step-alert-item-icon"
            >
              <li>
                审核流程自工单发起开始，通过设置的审核步骤后，最后以执行上线结束；
              </li>
              <li>
                审核流程模板最多可设置4个审核步骤，也可不设置审核步骤；
              </li>
              <li>
                单个步骤指定执行人时，最少需要添加一个指定人，最多只能添加三个指定人。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;

exports[`page/WorkflowTemplate/ReviewNodeInfo render review node and update review node info 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div>
    <div
      class="css-u6p6f9"
    >
      <div
        class="step-title-wrapper"
      >
        <div
          class="step-title"
        >
          审核节点
        </div>
        <div
          class="step-title-info"
        >
          编辑审核流程，拖拽移动审核节点顺序，审核人在该步骤可以执行「审核通过」或「驳回」操作
        </div>
      </div>
      <div
        class="step-info-wrapper"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
        >
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="desc"
                  title="步骤描述"
                >
                  步骤描述
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input ant-input-status-success basic-input-wrapper step-desc-textarea css-1pd1cd5"
                      data-testid="exec-user-desc"
                      id="desc"
                      placeholder="请输入{{name}}"
                      style="resize: none; height: 2px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item authorized-item-switch ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="approved_by_authorized"
                  title="匹配拥有数据源审核权限的成员"
                >
                  匹配拥有数据源审核权限的成员
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      aria-required="true"
                      class="ant-switch basic-switch-wrapper css-g6dhbn ant-switch-checked"
                      id="approved_by_authorized"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="assignee_user_id_list"
                  title="审核人"
                >
                  审核人
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      data-testid="exec-user-select"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="assignee_user_id_list_list_0"
                                aria-autocomplete="list"
                                aria-controls="assignee_user_id_list_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="assignee_user_id_list_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                disabled=""
                                id="assignee_user_id_list"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1uvv7g7"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
        </form>
        <div
          class="ant-divider ant-divider-horizontal step-info-divider"
          role="separator"
        />
        <div
          class="css-4a4iba"
        >
          <span
            class="ant-typography step-alert-title"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle step-alert-title-tips-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            创建/更新审批流程时请注意以下几点：
          </span>
          <div
            class="ant-typography step-alert-content"
          >
            <ul
              class="step-alert-item-icon"
            >
              <li>
                审核流程自工单发起开始，通过设置的审核步骤后，最后以执行上线结束；
              </li>
              <li>
                审核流程模板最多可设置4个审核步骤，也可不设置审核步骤；
              </li>
              <li>
                单个步骤指定执行人时，最少需要添加一个指定人，最多只能添加三个指定人。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/ReviewNodeInfo render review node with default assignee user 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div>
    <div
      class="css-u6p6f9"
    >
      <div
        class="step-title-wrapper"
      >
        <div
          class="step-title"
        >
          审核节点
        </div>
        <div
          class="step-title-info"
        >
          编辑审核流程，拖拽移动审核节点顺序，审核人在该步骤可以执行「审核通过」或「驳回」操作
        </div>
      </div>
      <div
        class="step-info-wrapper"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
        >
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="desc"
                  title="步骤描述"
                >
                  步骤描述
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input ant-input-status-success basic-input-wrapper step-desc-textarea css-1pd1cd5"
                      data-testid="exec-user-desc"
                      id="desc"
                      placeholder="请输入{{name}}"
                      style="resize: none; height: 2px;"
                    >
                      step desc
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item authorized-item-switch"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="approved_by_authorized"
                  title="匹配拥有数据源审核权限的成员"
                >
                  匹配拥有数据源审核权限的成员
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="false"
                      aria-required="true"
                      class="ant-switch basic-switch-wrapper css-g6dhbn"
                      id="approved_by_authorized"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="assignee_user_id_list"
                  title="审核人"
                >
                  审核人
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                      data-testid="exec-user-select"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="assignee_user_id_list_list_0"
                                aria-autocomplete="list"
                                aria-controls="assignee_user_id_list_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="assignee_user_id_list_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="assignee_user_id_list"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1uvv7g7"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
        </form>
        <div
          class="ant-divider ant-divider-horizontal step-info-divider"
          role="separator"
        />
        <div
          class="css-4a4iba"
        >
          <span
            class="ant-typography step-alert-title"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle step-alert-title-tips-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            创建/更新审批流程时请注意以下几点：
          </span>
          <div
            class="ant-typography step-alert-content"
          >
            <ul
              class="step-alert-item-icon"
            >
              <li>
                审核流程自工单发起开始，通过设置的审核步骤后，最后以执行上线结束；
              </li>
              <li>
                审核流程模板最多可设置4个审核步骤，也可不设置审核步骤；
              </li>
              <li>
                单个步骤指定执行人时，最少需要添加一个指定人，最多只能添加三个指定人。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/WorkflowTemplate/ReviewNodeInfo validate assignee user number 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div>
    <div
      class="css-u6p6f9"
    >
      <div
        class="step-title-wrapper"
      >
        <div
          class="step-title"
        >
          审核节点
        </div>
        <div
          class="step-title-info"
        >
          编辑审核流程，拖拽移动审核节点顺序，审核人在该步骤可以执行「审核通过」或「驳回」操作
        </div>
      </div>
      <div
        class="step-info-wrapper"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
        >
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="desc"
                  title="步骤描述"
                >
                  步骤描述
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input basic-input-wrapper step-desc-textarea css-1pd1cd5"
                      data-testid="exec-user-desc"
                      id="desc"
                      placeholder="请输入{{name}}"
                      style="resize: none; height: 2px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item authorized-item-switch"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="approved_by_authorized"
                  title="匹配拥有数据源审核权限的成员"
                >
                  匹配拥有数据源审核权限的成员
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="false"
                      aria-required="true"
                      class="ant-switch basic-switch-wrapper css-g6dhbn"
                      id="approved_by_authorized"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      >
                        <span
                          class="ant-switch-inner-checked"
                        />
                        <span
                          class="ant-switch-inner-unchecked"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="assignee_user_id_list"
                  title="审核人"
                >
                  审核人
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                      data-testid="exec-user-select"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="admin"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                admin
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test1"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test1
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test2"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test2
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test3"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test3
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="assignee_user_id_list_list_0"
                                aria-autocomplete="list"
                                aria-controls="assignee_user_id_list_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="assignee_user_id_list_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="assignee_user_id_list"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1uvv7g7"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                上一步
              </span>
            </button>
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-lfzis8"
              type="button"
            >
              <span>
                下一步
              </span>
            </button>
          </div>
        </form>
        <div
          class="ant-divider ant-divider-horizontal step-info-divider"
          role="separator"
        />
        <div
          class="css-4a4iba"
        >
          <span
            class="ant-typography step-alert-title"
          >
            <span
              aria-label="info-circle"
              class="anticon anticon-info-circle step-alert-title-tips-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            创建/更新审批流程时请注意以下几点：
          </span>
          <div
            class="ant-typography step-alert-content"
          >
            <ul
              class="step-alert-item-icon"
            >
              <li>
                审核流程自工单发起开始，通过设置的审核步骤后，最后以执行上线结束；
              </li>
              <li>
                审核流程模板最多可设置4个审核步骤，也可不设置审核步骤；
              </li>
              <li>
                单个步骤指定执行人时，最少需要添加一个指定人，最多只能添加三个指定人。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
